# iced-prompt

./: Cargo.toml  README.org  default.nix  flake.nix  run
data/: nested_simple.json  system_types_simple.json  user_friendly_simple.json
scripts/: bb.edn
scripts/src/: file_explorer.clj
src/: main.rs
src/core/: cmd.rs  cmds.rs  commands.rs  daemon.rs  history.rs  mod.rs  mode.rs
src/gui/: colors.rs  daemon.rs  fonts.rs  icons.rs  mod.rs  style.rs
src/gui/components/: spinner.rs
src/utils/: macros.rs  mod.rs
