[package]
name = "iced_prompt"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
iced = { git ="https://github.com/iced-rs/iced.git", rev ="a5ae442819227b3cd55116028e6d6c96caa6fda9", features = ["async-std", "debug"] }

async-std = { version = "1.12.0" }
directories-next = { version = "2.0.0" }
tracing-subscriber = "0.3.18"
once_cell = { version = "1.19.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }
num = "0.4.1"
