[package]
name = "iced_prompt"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
iced = { version = "0.10.0", features = ["async-std", "debug", "advanced", "svg"] }

async-std = { version = "1.12.0" }
directories-next = { version = "2.0.0" }
tracing-subscriber = "0.3.18"
once_cell = { version = "1.19.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }
num = "0.4.1"
levenshtein = "1.0.5"
clap = { version = "4.5.1", features = ["derive"] }
shellexpand = "3.1.0"
dirs = "5.0.1"
subprocess = "0.2.9"
fork = "0.1.23"
nix = { version = "0.28.0", features = ["process"] }
